Major API changes.